--- a/Parcial3_Analizador.ipynb
+++ b/Parcial3_Analizador.ipynb
@@ -459,15 +459,15 @@
     "        confidence = predictions[0][rating-1].item()\n",
     "\n",
     "        if rating < 2:\n",
-    "            sentimiento = \"Muy Negativo\"\n",
+    "            sentimiento = \"Despropiado\"\n",
     "        elif rating == 2:\n",
-    "            sentimiento = \"Negativo\"\n",
+    "            sentimiento = \"Poco Apropiado\"\n",
     "        elif rating == 3:\n",
     "            sentimiento = \"Neutral\"\n",
     "        elif rating == 4:\n",
-    "            sentimiento = \"Positivo\"\n",
+    "            sentimiento = \"Apropiado\"\n",
     "        else:\n",
-    "            sentimiento = \"Muy Positivo\"\n",
+    "            sentimiento = \"Muy Apropiado\"\n",
     "\n",
     "        sentimiento_completo = f\"{sentimiento} ({rating} estrellas)\"\n",
     "        confianza = round(confidence * 100, 2)\n",
